<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:id="@+id/crd_image_item"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <ImageView
            android:id="@+id/iv_food"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image"
            android:scaleType="centerCrop"
            android:src="@color/SecondaryColor" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/med_margin_8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
            android:textColor="@color/black"
            android:text="@string/food_name"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/med_margin_8dp"
            android:lines="2"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:text="@string/food_description_will_appear_here"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:text="@string/_0"
        android:layout_margin="@dimen/med_margin_8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"/>
</LinearLayout>