<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/crd_image_item"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/image"
                android:scaleType="centerCrop"
                android:src="@color/SecondaryColor" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/med_margin_8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                android:textColor="@color/black"
                android:text="@string/food_name"
                android:ellipsize="end"/>

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/med_margin_8dp"
                android:lines="3"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:text="@string/food_description_will_appear_here"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/_0"
            android:layout_margin="@dimen/med_margin_8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"/>
    </LinearLayout>

    <view
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDivider"
        android:layout_marginTop="@dimen/med_margin_8dp"
        android:layout_marginHorizontal="@dimen/larg_margin_16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/larg_margin_16dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/crd_minus"
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="2dp"
                app:cardElevation="@dimen/card_elevation_4dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/minus"
                    android:textAppearance="@style/TextAppearance.Compat.Notification.Title"
                    android:textColor="@color/white" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Compat.Notification.Title"
                android:padding="@dimen/padding_8dp"
                android:text="@string/zero"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/crd_plus"
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:cardBackgroundColor="@color/SecondaryColor"
                app:cardCornerRadius="2dp"
                app:cardElevation="@dimen/card_elevation_4dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/plus"
                    android:textAppearance="@style/TextAppearance.Compat.Notification.Title"
                    android:textColor="@color/black" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.Compat.Notification.Title"
            android:text="@string/_0"
            android:layout_gravity="end|center"
            android:gravity="end"
            android:layout_marginHorizontal="@dimen/larg_margin_16dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:layout_margin="@dimen/larg_margin_16dp"/>
</LinearLayout>