<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".ui.LoginActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/ic_splash_screen_logo" />
    </FrameLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:cardCornerRadius="8dp"
        app:cardElevation="@dimen/card_elevation_4dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:contentPadding="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_login_activity_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/med_margin_8dp"
                android:layout_marginLeft="@dimen/med_margin_8dp"
                android:layout_marginTop="@dimen/larg_margin_16dp"
                android:layout_marginEnd="@dimen/med_margin_8dp"
                android:layout_marginRight="@dimen/med_margin_8dp"
                android:autofillHints="@string/email"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/et_login_activity_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/med_margin_8dp"
                android:layout_marginLeft="@dimen/med_margin_8dp"
                android:layout_marginTop="@dimen/larg_margin_16dp"
                android:layout_marginEnd="@dimen/med_margin_8dp"
                android:layout_marginRight="@dimen/med_margin_8dp"
                android:autofillHints="@string/password"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_registration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/med_margin_8dp"
                    android:layout_marginLeft="@dimen/med_margin_8dp"
                    android:layout_marginEnd="@dimen/med_margin_8dp"
                    android:layout_marginRight="@dimen/med_margin_8dp"
                    android:layout_weight="1.3"
                    android:gravity="start"
                    android:padding="@dimen/padding_4dp"
                    android:text="@string/tv_register"
                    android:textColor="@color/LinkColor"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="@dimen/padding_8dp">

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="@dimen/med_margin_8dp"
                    android:layout_marginLeft="@dimen/med_margin_8dp"
                    android:layout_marginEnd="@dimen/med_margin_8dp"
                    android:layout_marginRight="@dimen/med_margin_8dp"
                    android:layout_marginBottom="@dimen/larg_margin_16dp"
                    android:background="@drawable/btn_background"
                    android:text="@string/login"
                    android:textColor="@color/BlackColor"
                    android:textStyle="bold" />
            </FrameLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>