<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:id="@+id/crd_fast_food"
            android:layout_width="220dp"
            android:layout_height="100dp"
            android:layout_marginBottom="@dimen/larg_margin_16dp"
            app:cardBackgroundColor="@color/SecondaryColor"
            app:cardCornerRadius="8dp"
            app:cardElevation="@dimen/card_elevation_4dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/fast_food"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/crd_sweets"
            android:layout_width="220dp"
            android:layout_height="100dp"
            android:layout_marginBottom="@dimen/larg_margin_16dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="8dp"
            app:cardElevation="@dimen/card_elevation_4dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sweets"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/white" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/crd_salads"
            android:layout_width="220dp"
            android:layout_height="100dp"
            android:layout_marginBottom="@dimen/larg_margin_16dp"
            app:cardBackgroundColor="@color/SecondaryColor"
            app:cardCornerRadius="8dp"
            app:cardElevation="@dimen/card_elevation_4dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/salads"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/crd_drinks"
            android:layout_width="220dp"
            android:layout_height="100dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="8dp"
            app:cardElevation="@dimen/card_elevation_4dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/drinks"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/white" />

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>